feat: serve interactive api documentation that can be switched off
